# SC1007_LL

./: CMakeLists.txt
src/q1/: CMakeLists.txt  Q1.c
src/q2/: CMakeLists.txt  Q2.c
src/q3/: CMakeLists.txt  Q3.c
src/q4/: CMakeLists.txt  Q4.c
tests/q1/: EVEN_LIST_output.txt  INPUT1_LIST_input.txt  INPUT1_LIST_output.txt  INPUT2_LIST_output.txt  ODD_LIST_input.txt  ODD_LIST_output.txt  Q1_EMPTY_LIST_output.txt  Q1_EVEN_LIST_input.txt  Q1_INPUT1_LIST_output.txt  Q1_INPUT2_LIST_input.txt  Q1_INPUT2_LIST_output.txt
tests/q2/: Q2_EMPTY_LIST_output.txt  Q2_INPUT1_LIST_input.txt  Q2_INPUT1_LIST_output.txt  Q2_INPUT2_LIST_input.txt  Q2_INPUT2_LIST_output.txt
tests/q3/: Q3_INPUT2_LIST_input.txt
tests/q4/: Q4_EMPTY_LIST_output.txt  Q4_INPUT1_LIST_input.txt  Q4_INPUT1_LIST_output.txt  Q4_INPUT2_LIST_input.txt  Q4_INPUT2_LIST_output.txt
